--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,6 +32,17 @@ img {
   margin: 0 auto;
 }
 
+.player-box {
+  position: relative;
+}
+
+.player-overlayer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+}
+
 iframe{
   max-width: 100% !important;
 }
@@ -51,6 +62,19 @@ iframe{
   background-color: #f1363a;
   border-color: #f1363a;
   opacity: 0.75
+}
+
+.card {
+  border: 1px solid black !important;
+  color: white  !important;
+}
+.card-header {
+  background-color: black !important;
+  border-bottom: 1px solid black !important;
+}
+
+.card-body {
+  background-color: gray !important;
 }
 
 @media (max-width: 767px) {
